# HMI-boat

./: .gitignore  LICENSE  README.md  buttons.py  file_tree.txt  heading_control.py  hello.py  main.py  map.html  map_graph.py  otter_status_log.csv  sim_log.csv  speed_control.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
ngc_bringup/: CMakeLists.txt  package.xml
ngc_bringup/config/: PlotJuggler_layout.xml  params.yaml  simulator_config.yaml  vessel_config.yaml
ngc_bringup/launch/: ngc.launch.py
ngc_hmi/ngc_hmi/: custom_slider_widget.py
ngc_hull_sim/: setup.py
ngc_interfaces/: CMakeLists.txt
ngc_interfaces/msg/: Nu.msg  SetPoints.msg
ngc_propulsion_sim/: package.xml  setup.cfg
ngc_propulsion_sim/ngc_propulsion_sim/: ngc_propulsion_sim.py
ngc_sensor_sims/: setup.py
ngc_sensor_sims/ngc_sensor_sims/: anemometer.py  compass.py  gnss.py
ngc_sim/ngc_sim/: manual_control.py  ngc_sim.py  simple_gui.py
ngc_teleop/: package.xml  setup.cfg  setup.py
ngc_teleop/ngc_teleop/: arbeidsbaat_man_sp.py
ngc_thruster_model/: setup.cfg  setup.py
ngc_thruster_system/: package.xml  setup.cfg  setup.py
ngc_thruster_system/ngc_thruster_system/: allocator.py  thrust_torque_curve.py  thruster_model.py  thruster_system.py
ngc_utils/: package.xml  setup.cfg  setup.py
ngc_utils/ngc_utils/: math_utils.py  (+1 more)
src/: README.md
src/ngc_interfaces/: CMakeLists.txt  package.xml
src/ngc_interfaces/msg/: Eta.msg  GNSS.msg  HeadingDevice.msg  Nu.msg  OtterStatus.msg  Route.msg  SystemMode.msg  ThrusterSignals.msg  Waypoint.msg  Wind.msg
(+355 files in other folders)
